fix font size on mobile

--- a/2048/style/main.css
+++ b/2048/style/main.css
@@ -429,8 +429,7 @@ hr {
     font-size: 24px; }
     @media screen and (max-width: 520px) {
       .tile.tile-super .tile-inner {
-        font-size: 8px; } }
-
+        font-size: 4px; } }
     @media screen and (max-width: 520px) {
       .tile.tile-64 .tile-inner {
         font-size: 20px; } }
